# service-candle-writer

./: Cargo.toml  Dockerfile  Dockerfile.old  Dockerfile.valgrind  README.md
.github/workflows/: ci-master.yml  release-service.yml
client/: Cargo.toml
client/src/: lib.rs
generated_proto/: Cargo.toml  build.rs
generated_proto/src/: bid_ask_traits.rs  candle_message_traits.rs  lib.rs  rust_grpc_service.rs  service_candle_writer_messages.rs
proto/: example.proto  service_bus.proto
server/: Cargo.toml
server/src/: lib.rs  main.rs  settings_model.rs
server/src/app/: app_ctx.rs  mod.rs
server/src/caches/: candle_cache.rs  candle_type_cache.rs  candles_instrument_cache.rs
server/src/domain/: azure_table_name_generators.rs  database.rs  instrument_storage.rs  mod.rs  request_counter.rs
server/src/models/: candle.rs  candle_model_entity.rs  candle_type.rs  candles_bid_ask.rs  mod.rs
server/src/no_sql/: block_reader_record.rs  mod.rs  nft_registry.rs
server/src/services/: example_service.rs  mod.rs
server/src/subscribers/: bid_ask_subscriber.rs  mod.rs
service_bus/: Cargo.toml
service_bus/src/: lib.rs
