[package]
name = "service-candle-writer-service-bus"
version = "0.1.0"
authors = ["Simpl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"

service-candle-writer-generated-proto = { path = "../generated_proto" }
